syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/khiemta03/bookstore-be/authentication-service/internal/grpc/authentication/pb";

message AccessToken {
    string access_token_value = 3;
    google.protobuf.Timestamp expires_at = 4;
}